# melty_streaming

./: .gitignore  .jshintrc  README.md  config.json  notes.txt  pyproject.toml  pyvenv.cfg  requirements.txt  run.bat  setup.cfg
client/: index.html  package-lock.json  package.json
client/src/: App.svelte  Border.svelte
client/src/lib/: Border.svelte
melty_stream/: api.py
melty_streaming/: api.py  proc.py
melty_streaming/static/: index.html  style.css
melty_streaming/static/js/: index.js
server/: __main__.py  handler.py  proc.py
src/melty_stream/: __init__.py
src/melty_stream/static/: style.css
src/melty_stream/static/js/: index.js
src/melty_streaming/: proc.py
static/: index.html
static/assets/: index.1972ba92.js  index.305b07a4.js  index.86c5bcbe.css  index.cc777ebf.css
