[metadata]
name = melty-stream
version = 1.0
author = Kikasuru
author_email = kikasurumail@gmail.com
description = A http server made for streaming Melty Blood
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kikasuru/melty_stream
project_urls =
    Bug Tracker = https://github.com/Kikasuru/melty_stream/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = melty_stream
packages = find:
python_requires = >=3.6

[options.packages.find]
where = melty_stream
